value definition editing, flow editing